[package]
name = "nethrune-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
bollard = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors"] }